file(GLOB_RECURSE ARM_SRC *.h *.cc)
file(GLOB_RECURSE REMOVE_SOURCES "*/compute_arm82/*")
list(REMOVE_ITEM ARM_SRC ${REMOVE_SOURCES})

if(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64" OR CMAKE_SYSTEM_PROCESSOR STREQUAL "arm64")
    file(GLOB_RECURSE ARM_SRC_ASM acc/compute/arm64/*.S)
    if(TNN_ARM82_ENABLE)
        if(CMAKE_SYSTEM_NAME MATCHES "Android")
            add_definitions( -march=armv8.2-a+fp16+nolse )
        else()
            add_definitions( -march=armv8.2-a+fp16 )
        endif()
    endif()
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "arm")
    file(GLOB_RECURSE ARM_SRC_ASM acc/compute/arm32/*.S)
    if(TNN_ARM82_ENABLE)
        if(CMAKE_SYSTEM_NAME MATCHES "Android")
            add_definitions( -march=armv7-a+fp16 -mfpu=neon-fp-armv8 -mfloat-abi=softfp )
        else()
            add_definitions( -march=neon )
        endif()
    else()
        add_definitions( -mfpu=neon )
    endif()
endif()

if(TNN_ARM82_ENABLE)
    add_subdirectory(acc/compute_arm82)
endif()

add_library(TNNArm OBJECT ${ARM_SRC} ${ARM_SRC_ASM})

#if(SYSTEM.Android)
#    target_link_libraries(TNNArm log)
#endif()
